crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM103_SIM103.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    UnnecessaryBoolCall:
      condition: a
      fixable: true
  location:
    row: 3
    column: 4
  end_location:
    row: 6
    column: 20
  fix:
    content: return bool(a)
    location:
      row: 3
      column: 4
    end_location:
      row: 6
      column: 20
  parent: ~
- kind:
    UnnecessaryBoolCall:
      condition: a == b
      fixable: true
  location:
    row: 11
    column: 4
  end_location:
    row: 14
    column: 20
  fix:
    content: return a == b
    location:
      row: 11
      column: 4
    end_location:
      row: 14
      column: 20
  parent: ~
- kind:
    UnnecessaryBoolCall:
      condition: b
      fixable: true
  location:
    row: 21
    column: 4
  end_location:
    row: 24
    column: 20
  fix:
    content: return bool(b)
    location:
      row: 21
      column: 4
    end_location:
      row: 24
      column: 20
  parent: ~
- kind:
    UnnecessaryBoolCall:
      condition: b
      fixable: true
  location:
    row: 32
    column: 8
  end_location:
    row: 35
    column: 24
  fix:
    content: return bool(b)
    location:
      row: 32
      column: 8
    end_location:
      row: 35
      column: 24
  parent: ~
- kind:
    UnnecessaryBoolCall:
      condition: a
      fixable: false
  location:
    row: 57
    column: 4
  end_location:
    row: 60
    column: 19
  fix: ~
  parent: ~
- kind:
    UnnecessaryBoolCall:
      condition: a
      fixable: false
  location:
    row: 83
    column: 4
  end_location:
    row: 86
    column: 20
  fix: ~
  parent: ~

