crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM105_SIM105.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    name: SuppressibleException
    body: "Use `contextlib.suppress(ValueError)` instead of try-except-pass"
    suggestion: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 7
    column: 8
  fix:
    edits:
      - content: "import contextlib\n"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
      - content: with contextlib.suppress(ValueError)
        location:
          row: 4
          column: 0
        end_location:
          row: 4
          column: 3
      - content: ""
        location:
          row: 6
          column: 0
        end_location:
          row: 7
          column: 8
  parent: ~
- kind:
    name: SuppressibleException
    body: "Use `contextlib.suppress(ValueError, OSError)` instead of try-except-pass"
    suggestion: ~
    fixable: false
  location:
    row: 9
    column: 0
  end_location:
    row: 12
    column: 8
  fix:
    edits:
      - content: "import contextlib\n"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
      - content: "with contextlib.suppress(ValueError, OSError)"
        location:
          row: 9
          column: 0
        end_location:
          row: 9
          column: 3
      - content: ""
        location:
          row: 11
          column: 0
        end_location:
          row: 12
          column: 8
  parent: ~
- kind:
    name: SuppressibleException
    body: "Use `contextlib.suppress(Exception)` instead of try-except-pass"
    suggestion: ~
    fixable: false
  location:
    row: 14
    column: 0
  end_location:
    row: 17
    column: 8
  fix:
    edits:
      - content: "import contextlib\n"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
      - content: with contextlib.suppress(Exception)
        location:
          row: 14
          column: 0
        end_location:
          row: 14
          column: 3
      - content: ""
        location:
          row: 16
          column: 0
        end_location:
          row: 17
          column: 8
  parent: ~
- kind:
    name: SuppressibleException
    body: "Use `contextlib.suppress(a.Error, b.Error)` instead of try-except-pass"
    suggestion: ~
    fixable: false
  location:
    row: 19
    column: 0
  end_location:
    row: 22
    column: 8
  fix:
    edits:
      - content: "import contextlib\n"
        location:
          row: 1
          column: 0
        end_location:
          row: 1
          column: 0
      - content: "with contextlib.suppress(a.Error, b.Error)"
        location:
          row: 19
          column: 0
        end_location:
          row: 19
          column: 3
      - content: ""
        location:
          row: 21
          column: 0
        end_location:
          row: 22
          column: 8
  parent: ~

