crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM107_SIM107.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    name: ReturnInTryExceptFinally
    body: "Don't use `return` in `try`/`except` and `finally`"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 8
  end_location:
    row: 9
    column: 18
  fix: ~
  parent: ~

