crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM108_SIM108.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    name: IfElseBlockInsteadOfIfExp
    body: "Use ternary operator `b = c if a else d` instead of `if`-`else`-block"
    suggestion: "Replace `if`-`else`-block with `b = c if a else d`"
    fixable: true
  location:
    row: 2
    column: 0
  end_location:
    row: 5
    column: 9
  fix:
    edits:
      - location:
          row: 2
          column: 0
        end_location:
          row: 5
          column: 9
        content: b = c if a else d
  parent: ~
- kind:
    name: IfElseBlockInsteadOfIfExp
    body: "Use ternary operator `abc = x if x > 0 else -x` instead of `if`-`else`-block"
    suggestion: ~
    fixable: false
  location:
    row: 58
    column: 0
  end_location:
    row: 63
    column: 12
  fix:
    edits: []
  parent: ~
- kind:
    name: IfElseBlockInsteadOfIfExp
    body: "Use ternary operator `b = cccccccccccccccccccccccccccccccccccc if a else ddddddddddddddddddddddddddddddddddddd` instead of `if`-`else`-block"
    suggestion: "Replace `if`-`else`-block with `b = cccccccccccccccccccccccccccccccccccc if a else ddddddddddddddddddddddddddddddddddddd`"
    fixable: true
  location:
    row: 82
    column: 0
  end_location:
    row: 85
    column: 45
  fix:
    edits:
      - location:
          row: 82
          column: 0
        end_location:
          row: 85
          column: 45
        content: b = cccccccccccccccccccccccccccccccccccc if a else ddddddddddddddddddddddddddddddddddddd
  parent: ~
- kind:
    name: IfElseBlockInsteadOfIfExp
    body: "Use ternary operator `exitcode = 0 if True else 1` instead of `if`-`else`-block"
    suggestion: ~
    fixable: false
  location:
    row: 97
    column: 0
  end_location:
    row: 100
    column: 16
  fix:
    edits: []
  parent: ~
- kind:
    name: IfElseBlockInsteadOfIfExp
    body: "Use ternary operator `x = 3 if True else 5` instead of `if`-`else`-block"
    suggestion: ~
    fixable: false
  location:
    row: 104
    column: 0
  end_location:
    row: 105
    column: 11
  fix:
    edits: []
  parent: ~
- kind:
    name: IfElseBlockInsteadOfIfExp
    body: "Use ternary operator `x = 3 if True else 5` instead of `if`-`else`-block"
    suggestion: ~
    fixable: false
  location:
    row: 109
    column: 0
  end_location:
    row: 112
    column: 9
  fix:
    edits: []
  parent: ~

