crates/ruff/src/rules/flake8_simplify/snapshots/ruff__rules__flake8_simplify__tests__SIM109_SIM109.py.snap
---
source: crates/ruff/src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- - kind:
      name: CompareWithTuple
      body: "Use `a in (b, c)` instead of multiple equality comparisons"
      suggestion: "Replace with `a in (b, c)`"
      fixable: true
    location:
      row: 2
      column: 3
    end_location:
      row: 2
      column: 19
    fix:
      content: "a in (b, c)"
      location:
        row: 2
        column: 3
      end_location:
        row: 2
        column: 19
    parent: ~
  - kind:
      name: CompareWithTuple
      body: "Use `a in (b, c)` instead of multiple equality comparisons"
      suggestion: "Replace with `a in (b, c)`"
      fixable: true
    location:
      row: 6
      column: 4
    end_location:
      row: 6
      column: 20
    fix:
      content: "a in (b, c)"
      location:
        row: 6
        column: 4
      end_location:
        row: 6
        column: 20
    parent: ~
  - kind:
      name: CompareWithTuple
      body: "Use `a in (b, c)` instead of multiple equality comparisons"
      suggestion: "Replace with `a in (b, c)`"
      fixable: true
    location:
      row: 10
      column: 3
    end_location:
      row: 10
      column: 27
    fix:
      content: "a in (b, c) or None"
      location:
        row: 10
        column: 3
      end_location:
        row: 10
        column: 27
    parent: ~
  - kind:
      name: CompareWithTuple
      body: "Use `a in (b, c)` instead of multiple equality comparisons"
      suggestion: "Replace with `a in (b, c)`"
      fixable: true
    location:
      row: 14
      column: 3
    end_location:
      row: 14
      column: 27
    fix:
      content: "a in (b, c) or None"
      location:
        row: 14
        column: 3
      end_location:
        row: 14
        column: 27
    parent: ~

